TestCases/ASTTests/SemanticErrorsTests/CreateTests/read_file_before.dot
digraph AST {
  "128814121953520" [label="Start"];
  "128814121953520" -> "128814121945840";
  "128814121945840" [label="Code"];
  "128814121945840" -> "128814121947280";
  "128814121947280" [label="Function"];
  "128814121947280" -> "128814121943728";
  "128814121947280" -> "128814121943920";
  "128814121947280" -> "128814121953136";
  "128814121943728" [label="main"];
  "128814121943920" [label="Parameters"];
  "128814121953136" [label="Code"];
  "128814121953136" -> "128814121945216";
  "128814121953136" -> "128814121945648";
  "128814121953136" -> "128814121953184";
  "128814121945216" [label="Declaration"];
  "128814121945216" -> "128814121944400";
  "128814121945216" -> "128814121953952";
  "128814121944400" [label="main"];
  "128814121953952" [label="3"];
  "128814121945648" [label="Comment"];
  "128814121945648" -> "128814121945360";
  "128814121945360" [label=" This shouldn't return an error!"];
  "128814121953184" [label="Return"];
}
